package rest.order.Controller;

public class MailController {

}
